examples/test/testpolicy10096.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10096
  namespace: namespace326
spec:
  podSelector:
    matchLabels:
      key26: value41
      key9: value3
      key5: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value26
      podSelector:
        matchLabels:
          key24: value14
          key46: value39
          key7: value5
